--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,6 +8,9 @@ import "../styles/global.css";
   <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="robots" content="index, follow" />
+<link rel="canonical" href="https://uamon.online" />
+
 
   <title>{title ?? "UAMON — Український моніторинг серверів Minecraft"}</title>
 
