--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -43,6 +43,14 @@ import "../styles/global.css";
           >
             Діскорд
           </a>
+                    <a
+            href="/faq"
+            target="_blank"
+            rel="noreferrer"
+            class="hover:text-white"
+          >
+            FAQ
+          </a>
         </nav>
       </div>
     </header>
@@ -86,6 +94,7 @@ import "../styles/global.css";
           <a href="#" class="hover:text-white underline">TikTok</a>
           <a href="#" class="hover:text-white underline">Telegram</a> -->
           <a href="https://discord.gg/zPA5s2mA82" target="_blank" class="hover:text-white underline">Discord</a>
+          <a href="/faq" target="_blank" class="hover:text-white underline">FAQ</a>
            <!-- <a href="mailto:contact@uamon.online" class="hover:text-white underline">Email</a> -->
         </div>
 
