--- a/src/components/ServerCard.astro
+++ b/src/components/ServerCard.astro
@@ -47,6 +47,7 @@ const { server } = Astro.props;
                bg-neutral-700/70 border border-white/10
                text-white/90 hover:bg-neutral-700 hover:text-white
                active:scale-[0.97] transition"
+        data-ip={server.ip}
       >
         Скопіювати IP
       </button>
