--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,9 @@ import "../styles/global.css";
 <!doctype html>
 <html lang="uk">
   <head>
+  <meta property="og:title" content="Моніторинг Minecraft серверів">
+  <meta property="og:image" content="https://uamon.online/default.png">
+  <meta property="og:type" content="website">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="robots" content="index, follow" />
