--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,6 +54,14 @@ import "../styles/global.css";
           >
             FAQ
           </a>
+                    <a
+            href="/"
+            target="_blank"
+            rel="noreferrer"
+            class="hover:text-white"
+          >
+           Головна
+          </a>
         </nav>
       </div>
     </header>
@@ -98,6 +106,7 @@ import "../styles/global.css";
           <a href="#" class="hover:text-white underline">Telegram</a> -->
           <a href="https://discord.gg/zPA5s2mA82" target="_blank" class="hover:text-white underline">Discord</a>
           <a href="/faq" target="_blank" class="hover:text-white underline">FAQ</a>
+          <a href="/" target="_blank" class="hover:text-white underline">ГОЛОВНА</a>
            <!-- <a href="mailto:contact@uamon.online" class="hover:text-white underline">Email</a> -->
         </div>
 
