--- a/src/pages/server/[slug].astro
+++ b/src/pages/server/[slug].astro
@@ -72,7 +72,8 @@ const { server } = Astro.props;
   server.discord ||
   server.telegram ||
   server.youtube ||
-  server.tiktok
+  server.tiktok||
+  server.map
 ) && (
   <div class="mt-6 rounded-xl border border-white/15 bg-neutral-900/60 backdrop-blur">
     <div class="border-b border-white/10 px-4 py-2 text-sm font-semibold text-white/70">
@@ -85,6 +86,13 @@ const { server } = Astro.props;
         <a href={server.website} target="_blank"
           class="flex items-center gap-3 rounded-lg px-3 py-2 text-white/80 hover:bg-white/5 hover:text-white transition">
           🌐 <span>Вебсайт</span>
+        </a>
+      )}
+
+            {server.map && (
+        <a href={server.map} target="_blank"
+          class="flex items-center gap-3 rounded-lg px-3 py-2 text-white/80 hover:bg-white/5 hover:text-white transition">
+          🗺️ <span>Мапа</span>
         </a>
       )}
 
