--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,10 @@ import "../styles/global.css";
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="robots" content="index, follow" />
 <link rel="canonical" href="https://uamon.online" />
+<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+  />
 
 
   <title>{title ?? "UAMON — Український моніторинг серверів Minecraft"}</title>
@@ -44,6 +48,7 @@ import "../styles/global.css";
             rel="noreferrer"
             class="hover:text-white"
           >
+          <i class="fa-brands fa-discord"></i>
             Діскорд
           </a>
                     <a
@@ -52,6 +57,7 @@ import "../styles/global.css";
             rel="noreferrer"
             class="hover:text-white"
           >
+          <i class="fa-solid fa-circle-question"></i>
             FAQ
           </a>
                     <a
@@ -60,6 +66,7 @@ import "../styles/global.css";
             rel="noreferrer"
             class="hover:text-white"
           >
+          <i class="fa-solid fa-house"> </i>
            Головна
           </a>
         </nav>
