--- a/src/pages/monitoring/bedrock.astro
+++ b/src/pages/monitoring/bedrock.astro
@@ -17,7 +17,7 @@ import Layout from "../../layouts/Layout.astro";
       </div>
 
       <a
-        href="https://discord.com/invite/ВАШ_ІНВАЙТ"
+        href="https://discord.gg/zPA5s2mA82"
         target="_blank"
         rel="noopener noreferrer"
         class="mt-5 inline-flex items-center justify-center rounded-xl
